fixed alignment issue in collapsed state while adding groups in template screen

--- a/src/app/modules/templates/template-list/template-list.component.scss
+++ b/src/app/modules/templates/template-list/template-list.component.scss
@@ -41,9 +41,21 @@
     left: 8.5em;
   }
 
+  .stage-action-bar {
+    border-top: solid 1px var(--btn-lightgray-border);
+    border-bottom: solid 1px var(--btn-lightgray-border);
+    width: 100%;
+    height: 8em;
+    position: absolute;
+    top: 11em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .collapse-container {
     position: absolute;
-    top: 12.5em;
+    top: 1.5em;
 
     .stage-action-collapse-text {
       font-family: LatoRegular;
@@ -54,10 +66,27 @@
     }
   }
 
+  .new-stage-btn {
+    position: absolute;
+    right: 0;
+    bottom: 5.1em;
+  }
+
+  .new-stage-btn-text {
+    border-radius: 4px;
+    font-family: LatoMedium;
+    font-size: 1em;
+    color: #fff;
+    display: flex;
+    height: 36px;
+    justify-content: center;
+    align-items: center;
+  }
+
   .right-align-searchbox {
     width: 23.813em !important;
     position: absolute;
-    top: 14.25em;
+    top: 3.5em;
   }
 
   #mat-search ::ng-deep .mat-form-field-underline {
@@ -709,9 +738,21 @@
     left: 8.5em;
   }
 
+  .stage-action-bar {
+    border-top: solid 1px var(--btn-lightgray-border);
+    border-bottom: solid 1px var(--btn-lightgray-border);
+    width: 100%;
+    height: 8em;
+    position: absolute;
+    top: 11em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .collapse-container {
     position: absolute;
-    top: 12.5em;
+    top: 1.5em;
 
     .stage-action-collapse-text {
       font-family: LatoRegular;
@@ -722,10 +763,27 @@
     }
   }
 
+  .new-stage-btn {
+    position: absolute;
+    right: 0;
+    bottom: 5.1em;
+  }
+
+  .new-stage-btn-text {
+    border-radius: 4px;
+    font-family: LatoMedium;
+    font-size: 1em;
+    color: #fff;
+    display: flex;
+    height: 36px;
+    justify-content: center;
+    align-items: center;
+  }
+
   .right-align-searchbox {
     width: 23.813em !important;
     position: absolute;
-    top: 14.25em;
+    top: 3.5em;
   }
 
   #mat-search ::ng-deep .mat-form-field-underline {
@@ -1376,9 +1434,21 @@
     left: 8.5em;
   }
 
+  .stage-action-bar {
+    border-top: solid 1px var(--btn-lightgray-border);
+    border-bottom: solid 1px var(--btn-lightgray-border);
+    width: 100%;
+    height: 8em;
+    position: absolute;
+    top: 11em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .collapse-container {
     position: absolute;
-    top: 12.5em;
+    top: 1.5em;
 
     .stage-action-collapse-text {
       font-family: LatoRegular;
@@ -1389,10 +1459,27 @@
     }
   }
 
+  .new-stage-btn {
+    position: absolute;
+    right: 0;
+    bottom: 5.1em;
+  }
+
+  .new-stage-btn-text {
+    border-radius: 4px;
+    font-family: LatoMedium;
+    font-size: 1em;
+    color: #fff;
+    display: flex;
+    height: 36px;
+    justify-content: center;
+    align-items: center;
+  }
+
   .right-align-searchbox {
     width: 23.813em !important;
     position: absolute;
-    top: 14.25em;
+    top: 3.5em;
   }
 
   #mat-search ::ng-deep .mat-form-field-underline {
@@ -2047,9 +2134,21 @@
     left: 9.5em;
   }
 
+  .stage-action-bar {
+    border-top: solid 1px var(--btn-lightgray-border);
+    border-bottom: solid 1px var(--btn-lightgray-border);
+    width: 100%;
+    height: 4em; //6em
+    position: absolute;
+    top: 5.5em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
   .collapse-container {
     position: absolute;
-    top: 6.688em; //7.688em
+    top: 1.1em;
 
     .stage-action-collapse-text {
       font-family: LatoRegular;
@@ -2061,11 +2160,28 @@
     }
   }
 
+  .new-stage-btn {
+    position: absolute;
+    right: 30em;
+  }
+
+  .new-stage-btn-text {
+    border-radius: 4px;
+    font-family: LatoRegular;
+    font-size: 0.875em;
+    line-height: 1.375em;
+    color: #fff;
+    display: flex;
+    height: 36px;
+    justify-content: center;
+    align-items: center;
+  }
+
   .right-align-searchbox {
     width: 23.813em !important;
     position: absolute;
     right: 0;
-    top: 5em; //6em
+    top: -0.5em
   }
 
   #mat-search ::ng-deep .mat-form-field-underline {
