--- a/src/app/modules/templates/template/template.component.scss
+++ b/src/app/modules/templates/template/template.component.scss
@@ -110,18 +110,6 @@
     color: var(--blackish-text);
   }
 
-  .stage-action-bar {
-    border-top: solid 1px var(--btn-lightgray-border);
-    border-bottom: solid 1px var(--btn-lightgray-border);
-    width: 100%;
-    height: 8em;
-    position: absolute;
-    top: 11em;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
   mat-button-toggle-group {
     margin: 24px 0 24px 0;
     border-color: var(--btn-gray-border);
@@ -138,23 +126,6 @@
     color: #fff;
     font-family: LatoRegular;
     font-size: 0.75em;
-  }
-
-  .new-stage-btn {
-    position: absolute;
-    right: 0;
-    bottom: 5.1em;
-  }
-
-  .new-stage-btn-text {
-    border-radius: 4px;
-    font-family: LatoMedium;
-    font-size: 1em;
-    color: #fff;
-    display: flex;
-    height: 36px;
-    justify-content: center;
-    align-items: center;
   }
 
   .template-container {
@@ -730,18 +701,6 @@
     color: var(--blackish-text);
   }
 
-  .stage-action-bar {
-    border-top: solid 1px var(--btn-lightgray-border);
-    border-bottom: solid 1px var(--btn-lightgray-border);
-    width: 100%;
-    height: 4em; //6em
-    position: absolute;
-    top: 5.5em;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
   mat-button-toggle-group {
     margin: 24px 0 24px 0;
     border-color: var(--btn-gray-border);
@@ -758,23 +717,6 @@
     color: #fff;
     font-family: LatoRegular;
     font-size: 0.75em;
-  }
-
-  .new-stage-btn {
-    position: absolute;
-    right: 30em;
-  }
-
-  .new-stage-btn-text {
-    border-radius: 4px;
-    font-family: LatoRegular;
-    font-size: 0.875em;
-    line-height: 1.375em;
-    color: #fff;
-    display: flex;
-    height: 36px;
-    justify-content: center;
-    align-items: center;
   }
 
   .template-container {
